2010-10-13  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/ver_agente.php: Fixed a SQL 
	query with safe_output function

2010-10-13  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.php: Fixed a SQL query with
	the safe_output function

2010-10-12  Junichi Satoh  <junichi@rworks.jp>

	* godmode/massive/massive_add_action_alerts.php,
	godmode/massive/massive_delete_action_alerts.php,
	godmode/massive/massive_add_alerts.php,
	godmode/massive/massive_copy_modules.php,
	godmode/massive/massive_delete_agents.php,
	godmode/massive/massive_edit_agents.php: Fixed action URLs.

2010-10-11  Miguel de Dios  <miguel.dedios@artica.es>

	* extensions/system_info.php: finally I finished (I hope) the extension of
	get system info, now the console part run.
	
	Pending task: #3065357

2010-10-11  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: cleaned source code style.
	
	* extensions/system_info.php: first version of extension for extract system
	info of Pandora System, at the moment run as PHP script shell, the source
	code for console is commented because I will change for new source code.

2010-10-11  Ramon Novoa  <rnovoa@artica.es>

	* include/fgraph.php: Search history DB if necessary for module charts.

2010-10-11  Miguel de Dios  <miguel.dedios@artica.es>

	* include/config_process.php: fixed the execution in as script.
	
	* include/fgraph.php: fixed in the "graphic_combined_module" when is empty.
	And cleaned source code style.
	
	* include/functions_extensions.php: cleaned source code style.
	
	* extensions/pandora_logs.php: cleaned source code style. And set to
	translation a string.
	
	* extras/pandora_diag.php: cleaned source code style.

2010-10-11 Sancho Lerena <slerena@artica.es>

        * include/functions_reporting.php: Fixed problem with SQL custom reports
        because the SQL html encoding. Added a SQL check for secure user-input
        SQL code.
